# openspec-extended

./: .pre-commit-config.yaml  AGENTS.md  README.md  install.sh  openspec.spec  pyproject.toml
.github/workflows/: release.yml
.mise/: config.toml
.mise/tasks/: release
.mise/tasks/version/: check  update
.mise/tasks/version/lib/: bump.sh  detect.sh  manifest.sh  state.sh
resources/: AGENTS.md
resources/claude/: AGENTS.md  manifest.toml
resources/claude/commands/: AGENTS.md
resources/claude/commands/osx/: AGENTS.md
resources/claude/skills/: AGENTS.md
resources/claude/skills/osx-concepts/references/: cli-reference.md
resources/claude/skills/osx-workflow/references/: autonomous-workflow.md
resources/opencode/: AGENTS.md  manifest.toml
resources/opencode/agents/: AGENTS.md  osx-analyzer.md  osx-builder.md  osx-maintainer.md
resources/opencode/commands/: AGENTS.md  osx-modify.md  osx-phase0.md  osx-phase1.md  osx-phase2.md  osx-phase3.md  osx-phase4.md  osx-phase5.md  osx-phase6.md  osx-review.md
resources/opencode/scripts/: osx-orchestrate  osx-orchestrate.py
resources/opencode/skills/: AGENTS.md
resources/opencode/skills/osx-workflow/: SKILL.md
resources/opencode/skills/osx-workflow/references/: autonomous-workflow.md
source/: AGENTS.md  cli.py  osx_cli.py
source/lib/: AGENTS.md  osx.py
source/orchestrator/: AGENTS.md  engine.py
tests/: AGENTS.md  conftest.py
tests/e2e/: AGENTS.md  mechanism.bats  test_full_workflow.py  test_mechanism.py
tests/e2e/helpers/: AGENTS.md
tests/fixtures/: AGENTS.md
tests/fixtures/install/: README.md
tests/helpers/: AGENTS.md
tests/integration/: AGENTS.md  install-flow.bats  test_change_lifecycle.py  test_completion_workflow.py  test_git_integration.py  test_install_flow.py  test_orchestration_logging.py  test_phase_workflow.py
tests/lib/: AGENTS.md  test_osx.py
tests/unit/: AGENTS.md  install.bats  test_architecture.py  test_openspec_extended.py  test_osx_orchestrate.py  test_schema_validation.py
