[project]
name = "openspec-extended"
version = "0.19.0"
description = "OpenSpec-extended - Bridge AI coding assistants with OpenSpec spec-driven development"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "typer>=0.15",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]
