[project]
name = "openspec-extended"
version = "0.19.0"
description = "OpenSpec-extended - Bridge AI coding assistants with OpenSpec spec-driven development"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "typer>=0.15",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests - fast, no external dependencies",
    "integration: Integration tests - test component workflows",
    "mechanism: Mechanism tests - CLI validation without AI calls",
    "e2e: E2E full tests - require AI calls (set E2E_CONFIRM=1)",
]
