[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openspec-extended"
version = "1.1.0"
description = "OpenSpec-extended - Bridge AI coding assistants with OpenSpec spec-driven development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "OpenSpec Contributors" }
]
keywords = ["openspec", "cli", "autonomous", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "toml>=0.10",
    "typer>=0.15",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pyinstaller>=6.0",
]

[project.scripts]
openspec-extended = "source.cli:app"

[project.urls]
Homepage = "https://github.com/openspec-extended"
Repository = "https://github.com/openspec-extended/openspec-extended"

[tool.hatch.build.targets.wheel]
packages = ["source"]

[tool.hatch.build.targets.sdist]
include = [
    "/source",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests - fast, no external dependencies",
    "integration: Integration tests - test component workflows",
    "mechanism: Mechanism tests - CLI validation without AI calls",
    "e2e: E2E full tests - require AI calls (set E2E_CONFIRM=1)",
]
